# whichvlm

./: CONTRIBUTING.md  Contributors.md  LICENSE  NOTICE  README.md  RECONSTRUCTION_COMMITS.md  UPSTREAM_NOTES.md  contributing.md  pyproject.toml
.github/: labels.yml
.github/workflows/: ci.yml  labels.yml
benchmarks/: real_hardware.py
src/: cli.py  constants.py  runtime.py  utils.py  whichvlm.py
src/data/: framework.py  gpu.py  lineage.py  quantization.py  vlm_inventory.py
src/engine/: compatibility.py  performance.py  quantization.py  ranker.py  types.py  vram.py  workload.py
src/hardware/: amd.py  apple.py  budget.py  catalog.py  cpu.py  detector.py  gpu_db.py  gpu_simulator.py  intel.py  memory.py  nvidia.py  types.py  windows.py
src/models/: benchmark.py  cache.py  fetcher.py  grouper.py  http.py  integrations.py  package_graph.py
src/output/: display.py  formatting.py  (+5 more)
tests/: test_aa_index.py  test_amd_detection.py  test_asahi_detection.py  test_benchmark_lookup.py  test_cache_encoding.py  test_cli.py  test_compatibility.py  test_e2e_cli.py  test_fetcher.py  test_gpu_db.py  test_gpu_simulator.py  test_grouper.py  test_gtx1650_variants.py  test_http.py  test_integrations.py  test_intel_gpu.py  test_kepler_gpus.py  test_markdown_output.py  test_memory.py  test_nvidia_detection.py  test_output_formatting.py  test_plan.py  test_quantization.py  test_ranker.py  test_ranking_calibration.py  test_ranking_edge_cases.py  test_ranking_quality_regressions.py  test_runtime.py  test_utils.py  test_vlm_inventory.py  test_vram.py  test_windows_cpu_detection.py  test_windows_gpu.py
(+56 files in other folders)
